# oled-nametag-firmware

./: .gitmodules  CMakeLists.txt  flash.sh  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt
main/assets/bitmaps/: ap_info_119x22.raw  applications_119x22.raw  battery_21x10.raw  disable_ap_119x22.raw  enable_ap_119x22.raw  generate_psk_176x9.raw  gif_player_119x21.raw  gif_player_119x22.raw  please_wait_119x22.raw  power_off_119x18.raw  psk_31x12.raw  settings_119x22.raw  ssid_37x12.raw  wlan_ap_15x12.raw  wlan_settings_119x20.raw  wlan_settings_119x22.raw  wlan_station_20x12.raw  wlan_station_disconnected_20x12.raw
main/assets/webroot/: animation.thtml  ota.thtml
main/assets/webroot/include/: resources.html
main/assets/webroot/js/: datatables.min.js  jquery-3.3.1.min.js  led.js
main/src/: accept_all_the_cookies.c  accept_all_the_cookies.h  ambient_light_sensor.c  ambient_light_sensor.h  api.c  api.h  async_http_client.c  async_http_client.h  battery_gauge.c  battery_gauge.h  bms_details.c  bms_details.h  bq27546.c  bq27546.h  buttons.c  buttons.h  cbjson.c  cbjson.h  charger.c  charger.h  charging_screen.c  charging_screen.h  datatypes.c  datatypes.h  dirent_cache.c  dirent_cache.h  display_settings.c  display_settings.h  embedded_files.h  event_bus.c  fft.c  fft.h  flash.c  flash.h  fonts.c  fonts.h  futil.c  futil.h  gifplayer.c  gifplayer.h  (+56 more)
main/webroot/: animation.thtml  events.thtml  led.thtml  ota.thtml
main/webroot/css/: datatables.min.css
main/webroot/include/: navbar.thtml
main/webroot/js/: animation.js  ota.js
